@@ -49,9 +49,6 @@
             <key> <string>group_list</string> </key>
             <value>
               <list>
-                <string>left</string>
-                <string>right</string>
-                <string>center</string>
                 <string>bottom</string>
                 <string>hidden</string>
               </list>
@@ -70,27 +67,11 @@
                     </value>
                 </item>
                 <item>
-                    <key> <string>center</string> </key>
-                    <value>
-                      <list/>
-                    </value>
-                </item>
-                <item>
                     <key> <string>hidden</string> </key>
                     <value>
-                      <list/>
-                    </value>
-                </item>
-                <item>
-                    <key> <string>left</string> </key>
-                    <value>
-                      <list/>
-                    </value>
-                </item>
-                <item>
-                    <key> <string>right</string> </key>
-                    <value>
-                      <list/>
+                      <list>
+                        <string>listbox_delivery_start_date</string>
+                      </list>
                     </value>
                 </item>
               </dictionary>
