@@ -10,13 +10,14 @@
             <key> <string>delegated_list</string> </key>
             <value>
               <list>
-                <string>title</string>
-                <string>columns</string>
                 <string>all_columns</string>
-                <string>search_columns</string>
-                <string>sort_columns</string>
-                <string>selection_name</string>
+                <string>columns</string>
+                <string>editable_columns</string>
                 <string>portal_types</string>
+                <string>search_columns</string>
+                <string>selection_name</string>
+                <string>sort_columns</string>
+                <string>title</string>
               </list>
             </value>
         </item>
@@ -98,7 +99,7 @@
                           <string>Destination</string>
                         </tuple>
                         <tuple>
-                          <string>delivery.stop_date</string>
+                          <string>delivery.start_date</string>
                           <string>Date</string>
                         </tuple>
                         <tuple>
@@ -143,7 +144,7 @@
                           <string>Destination</string>
                         </tuple>
                         <tuple>
-                          <string>delivery.stop_date</string>
+                          <string>delivery.start_date</string>
                           <string>Date</string>
                         </tuple>
                         <tuple>
@@ -153,6 +154,17 @@
                         <tuple>
                           <string>translated_simulation_state_title</string>
                           <string>State</string>
+                        </tuple>
+                      </list>
+                    </value>
+                </item>
+                <item>
+                    <key> <string>editable_columns</string> </key>
+                    <value>
+                      <list>
+                        <tuple>
+                          <string>delivery.start_date</string>
+                          <string>Date</string>
                         </tuple>
                       </list>
                     </value>
@@ -213,7 +225,7 @@
                           <string>Destination</string>
                         </tuple>
                         <tuple>
-                          <string>delivery.stop_date</string>
+                          <string>delivery.start_date</string>
                           <string>Date</string>
                         </tuple>
                         <tuple>
@@ -256,7 +268,7 @@
                           <string>Destination</string>
                         </tuple>
                         <tuple>
-                          <string>delivery.stop_date</string>
+                          <string>delivery.start_date</string>
                           <string>Date</string>
                         </tuple>
                         <tuple>
