@@ -1,3 +1,6 @@
+2011-11-22 yusei
+* Stop showing detailed DateTime in listbox. This problem started occur due to recent specification change of zope's DateTime.
+
 2011-07-01 yusei
 * Set proper title to interaction workflows.
 
